--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.scss
@@ -22,7 +22,7 @@ body {
   }
 }
 main {
-  background-color: #fff;
+  background-color: #f9f9f9;
   width: $container-width;
   margin: 0 auto;
   padding: 5rem;
