--- a/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_navbar.scss
@@ -45,7 +45,7 @@ nav {
         position: absolute;
         top: 0;
         right: 0;
-        background-color: #f9f9f9d7;
+        background: linear-gradient(#f9f9f9ce, white);
         padding: 5rem 2rem;
         border-radius: 1rem;
         z-index: 10;
