--- a/projects/graded-asignments/kelioniu-puslapis/styles.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.scss
@@ -211,11 +211,16 @@ header {
         height: 282px;
         width: 282px;
         position: relative;
+        &:hover .overlay-w-btns {
+          display: flex;
+        }
+
         img {
           height: 282px;
           width: 282px;
           object-fit: cover;
         }
+
         h3 {
           position: absolute;
           padding: 1rem;
@@ -230,6 +235,56 @@ header {
           font-weight: 600;
           line-height: 136.188%; /* 21.79px */
           text-transform: capitalize;
+        }
+        .overlay-w-btns {
+          background: linear-gradient(
+            rgba(43, 43, 43, 0.7),
+            rgba(43, 43, 43, 0.1)
+          );
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+          padding: 1rem;
+
+          display: none;
+
+          .btn-wrap {
+            border-radius: 1.5rem;
+            padding: 2px;
+            background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
+            width: max-content;
+            margin-top: 0.625rem;
+            .more-btn {
+              padding: 1rem 2rem;
+              border-radius: 1.5rem;
+              border: transparent;
+              background-color: #1f59ee;
+              color: white;
+            }
+            .map-btn {
+              padding: 1rem 2rem;
+              border-radius: 1.5rem;
+              border: transparent;
+              background-color: #1f59ee;
+              color: white;
+              display: flex;
+              align-items: center;
+
+              svg {
+                padding: 0 0.5rem;
+
+                path {
+                  fill: white;
+                }
+              }
+            }
+          }
         }
       }
     }
