--- a/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
@@ -20,20 +20,50 @@
     #f9f9f9 50%,
     #f9f9f9 100%
   );
+  @media screen and (max-width: 1350px) {
+    padding: 3rem 0;
+    width: 90vw;
+    left: -10vw;
+    // padding: 5rem 0;
+    background: linear-gradient(
+      to right,
+      white 0%,
 
+      #f9f9f9 100%
+    );
+  }
+  @media screen and (max-width: 770px) {
+    padding: 3rem 0;
+    width: 98%;
+    left: 0;
+  }
   .slider-card_text-box {
     margin: 0 auto;
-    padding: 0 10px 0 74px;
+    padding: 0 0.625rem 0 4.625rem;
     // height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     // border: 10px solid red;
     // width: calc(100% + 50px);
+
+    @media screen and (max-width: 1350px) {
+      grid-column: span 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-left: 0;
+      margin-bottom: 2rem;
+    }
+
+    @media screen and (max-width: 770px) {
+      margin-left: 0;
+      padding-left: 1rem;
+    }
     .category {
       color: #a6a6a6;
       font-family: "Roboto", sans-serif;
-      font-size: 14px;
+      font-size: 0.875rem;
       font-weight: 500;
       text-transform: uppercase;
     }
@@ -41,7 +71,7 @@
       h3 {
         color: #4b4b4b;
         font-family: "Roboto", sans-serif;
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 500;
         line-height: 136.188%; /* 32.685px */
         text-transform: capitalize;
@@ -55,7 +85,7 @@
       .place-name {
         color: #666;
         font-family: "Roboto", sans-serif;
-        font-size: 14px;
+        font-size: 0.875rem;
         font-weight: 500;
         line-height: 136.188%; /* 19.066px */
       }
@@ -63,34 +93,69 @@
         margin-top: 20px;
         color: #888;
         font-family: "Roboto", sans-serif;
-        font-size: 14px;
+        font-size: 0.875rem;
         font-weight: 400;
         line-height: 148.188%; /* 20.746px */
+        height: 8rem;
+        overflow-y: scroll;
+        @media screen and (max-width: 1350px) {
+          height: 5rem;
+        }
+        @media screen and (max-width: 770px) {
+          height: 5rem;
+        }
       }
     }
-    .btn-wrap {
-      border-radius: 24px;
-      padding: 2px;
-      background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
-      width: max-content;
-      margin-top: 10px;
-      .more-btn {
-        padding: 1rem 2rem;
-        border-radius: 24px;
-        border: transparent;
-        background-color: white;
-        color: #1f59ee;
+    .btn-section {
+      @media screen and (max-width: 1350px) {
+        position: absolute;
+        top: 2rem;
+        right: 1rem;
+        display: block;
       }
-      .map-btn {
-        padding: 1rem 2rem;
-        border-radius: 24px;
-        border: transparent;
-        background-color: white;
-        color: #1f59ee;
-        display: flex;
-        align-items: center;
-        svg {
-          padding: 1px;
+      @media screen and (max-width: 770px) {
+        display: block;
+        transform: scale(0.6);
+        top: 1rem;
+        right: 0.3rem;
+      }
+
+      .btn-wrap {
+        border-radius: 1.5rem;
+        padding: 2px;
+        background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
+        width: max-content;
+        margin-top: 0.625rem;
+        .more-btn {
+          padding: 1rem 2rem;
+          border-radius: 1.5rem;
+          border: transparent;
+          background-color: white;
+          color: #1f59ee;
+          &:hover {
+            background: linear-gradient(#00d4e4, white);
+          }
+          @media screen and (max-width: 1350px) {
+            padding: 0.5rem 1rem;
+          }
+        }
+        .map-btn {
+          padding: 1rem 2rem;
+          border-radius: 1.5rem;
+          border: transparent;
+          background-color: white;
+          color: #1f59ee;
+          display: flex;
+          align-items: center;
+          &:hover {
+            background: linear-gradient(#00d4e4, white);
+          }
+          @media screen and (max-width: 1350px) {
+            padding: 0.5rem 1rem;
+          }
+          svg {
+            padding: 1px;
+          }
         }
       }
     }
@@ -109,6 +174,14 @@
     // height: $slider-pic-height;
     // background-color: white;
     z-index: 4;
+
+    @media screen and (max-width: 1350px) {
+      grid-column: span 2;
+      height: 350px;
+      width: 90%;
+      margin: 0 auto;
+    }
+
     .left-pic {
       display: inline-block;
       position: absolute;
@@ -125,6 +198,11 @@
 
       border-radius: 15.586px;
       box-shadow: -8px 8px 42px 0px rgba(0, 0, 0, 0.25);
+
+      @media screen and (max-width: 770px) {
+        width: 100%;
+        min-width: 10vw;
+      }
     }
     .right-pic {
       display: inline-block;
@@ -142,19 +220,12 @@
       opacity: 0.5;
       z-index: 5;
       border-radius: 15.586px;
+
+      @media screen and (max-width: 770px) {
+        display: none;
+      }
     }
-    .under-pic {
-      display: inline-block;
-      position: absolute;
-      // right: 0;
-      top: 0;
-      // height: $slider-pic-height;
-      // width: $slider-pic-width;
-      object-fit: cover;
-      object-position: center;
-      opacity: 0;
-      z-index: 3;
-    }
+
     .reserve-pic {
       display: none;
     }
@@ -175,7 +246,18 @@
       left: 67px;
       padding: 1rem;
     }
-
+    .map-outline {
+      opacity: 0.4;
+      position: absolute;
+      top: -100px;
+      z-index: -2;
+      @media screen and (max-width: 1350px) {
+        display: none;
+        top: -50%;
+        left: 10%;
+        z-index: -3;
+      }
+    }
     // ==============================================
     // ==============================================
     // ==============================================
@@ -232,7 +314,7 @@
       0% {
         opacity: 0.4;
         right: 0;
-        transform: rotate(-2deg);
+        // transform: rotate(-2deg);
 
         background-image: url("./pics/lt-veliava.jpeg");
         background-size: cover;
@@ -289,7 +371,7 @@
       0% {
         opacity: 1;
         // left: 0;
-        transform: rotate(2deg);
+        // transform: rotate(2deg);
 
         background-image: url("./pics/lt-veliava.jpeg");
         background-size: cover;
@@ -349,65 +431,5 @@
     //--------------------------------------
     //------------------------------------------
     //   ----------------------------------------
-    .map-outline {
-      opacity: 0.4;
-      position: absolute;
-      top: -100px;
-      z-index: -2;
-    }
-  }
-}
-@media screen and (max-width: 1350px) {
-  .slider-card {
-    width: 90vw;
-    left: -10vw;
-    padding: 5rem 0;
-    .slider-card_text-box {
-      grid-column: span 2;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      margin-left: 0;
-      margin-bottom: 2rem;
-    }
-    .btn-section {
-      // display: flex;
-      // justify-content: end;
-      display: none;
-    }
-    .slider {
-      grid-column: span 2;
-      height: 350px;
-      width: 90%;
-      margin: 0 auto;
-      // .left-pic,
-      // .right-pic {
-      //   // min-width: none;
-      // }
-      .map-outline {
-        display: none;
-        top: -50%;
-        left: 10%;
-        z-index: -3;
-      }
-    }
-  }
-}
-@media screen and (max-width: 770px) {
-  .slider-card {
-    .slider-card_text-box {
-      margin-left: 0;
-    }
-    width: 98%;
-    left: 0;
-    .slider {
-      .left-pic {
-        width: 100%;
-        min-width: 10vw;
-      }
-      .right-pic {
-        display: none;
-      }
-    }
   }
 }
