--- a/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/slider/_slider.scss
@@ -133,6 +133,7 @@
           background-color: white;
           color: #1f59ee;
           &:hover {
+            cursor: pointer;
             background: linear-gradient(#00d4e4, white);
           }
           @media screen and (max-width: 1350px) {
@@ -148,6 +149,8 @@
           display: flex;
           align-items: center;
           &:hover {
+            cursor: pointer;
+
             background: linear-gradient(#00d4e4, white);
           }
           @media screen and (max-width: 1350px) {
