--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.css
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.css
@@ -30,6 +30,9 @@ nav .nav-links a {
   color: #1b6bed;
   font-weight: 600;
 }
+nav .nav-links a:hover {
+  color: #073580;
+}
 nav img {
   height: 15px;
 }
@@ -111,6 +114,10 @@ footer .footer_top .footer_top_left .footer_top_left_down svg {
   border-radius: 100%;
   padding: 7px;
   height: 24px;
+}
+footer .footer_top .footer_top_left .footer_top_left_down svg:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 footer .footer_top .footer_top_right {
   display: flex;
@@ -202,15 +209,15 @@ main {
   justify-content: center;
 }
 main .contact-box {
+  flex: 5 1 2;
   background-color: white;
-  width: 60%;
   display: flex;
   justify-content: space-around;
   align-items: start;
   flex-wrap: wrap;
   gap: 2.5rem;
   box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
-  padding: 3.6rem 1rem 0 1rem;
+  padding: 3.6rem 1rem 1rem 1rem;
 }
 main .contact-box .kontaktai,
 main .contact-box .rekvizitai {
@@ -268,6 +275,7 @@ main .contact-box .map {
   box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
 }
 main .forma {
+  flex: 0 2 auto;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -316,4 +324,8 @@ main .forma button {
   text-transform: uppercase;
   width: -moz-fit-content;
   width: fit-content;
+}
+main .forma button:hover {
+  cursor: pointer;
+  background: linear-gradient(#014449, rgb(31, 23, 183));
 }/*# sourceMappingURL=contacts.css.map */
