--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
@@ -33,15 +33,16 @@ main {
   gap: 2rem;
   justify-content: center;
   .contact-box {
+    flex: 5 1 2;
     background-color: white;
-    width: 60%;
+    // width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: start;
     flex-wrap: wrap;
     gap: 2.5rem;
     box-shadow: 0px 0px 20px 0px rgba(122, 116, 116, 0.1);
-    padding: 3.6rem 1rem 0 1rem;
+    padding: 3.6rem 1rem 1rem 1rem;
     .kontaktai,
     .rekvizitai {
       display: flex;
@@ -93,6 +94,7 @@ main {
     }
   }
   .forma {
+    flex: 0 2 auto;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -140,6 +142,10 @@ main {
       font-weight: 700;
       text-transform: uppercase;
       width: fit-content;
+      &:hover {
+        cursor: pointer;
+        background: linear-gradient(#014449, rgb(31, 23, 183));
+      }
     }
   }
 }
