[kelioniu]:some refactoring

--- a/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_footer.scss
@@ -1,5 +1,13 @@
 @import "../variables";
 
+// ------------------------------------
+// =============FOOTER NAMING:=========
+//   ----------------------------------
+// footer-top-left--------------    footer-top-right--------
+// footer-top-left-down---------  navigacija----kontaktai---
+// svg
+//-------------------- copyright-----------------------------
+
 footer {
   color: white;
   background-color: #11224d;
