--- a/projects/graded-asignments/kelioniu-puslapis/styles.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.scss
@@ -201,9 +201,6 @@ header {
       font-weight: 700;
     }
     .thumbs {
-      width: 100%;
-      // display: grid;
-      // grid-template-columns: repeat(4, 1fr);
       row-gap: 4rem;
       column-gap: 2.4rem;
 
@@ -275,7 +272,8 @@ header {
 
               &:hover {
                 cursor: pointer;
-                background: linear-gradient(#014449, rgb(31, 23, 183));
+                background: linear-gradient(#0c3d99, rgb(31, 23, 183));
+                border: none;
               }
             }
             .map-btn {
@@ -288,14 +286,13 @@ header {
               align-items: center;
               &:hover {
                 cursor: pointer;
-                background: linear-gradient(#014449, rgb(31, 23, 183));
+                background: linear-gradient(#0c3d99, rgb(31, 23, 183));
+                border: none;
               }
-              svg {
+              .place-marker-2 {
+                height: 21px;
+                width: 17px;
                 padding: 0 0.5rem;
-
-                path {
-                  fill: white;
-                }
               }
             }
           }
