[keliuoniu pusl] added variables,fixed header,decor

--- a/projects/graded-asignments/kelioniu-puslapis/_variables.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/_variables.scss
@@ -1,3 +1,15 @@
 $container-width: 70%;
 $slider-pic-height: 450px;
 $slider-pic-width: calc($slider-pic-height / 1.4);
+
+$blue-btn: #1f59ee;
+$dark-blue: #11224d;
+$grey-bg: #f9f9f9;
+$grey-overlay: #888;
+$dark-grey: #333;
+
+$big-screen: 1350px;
+$big-tablet-scr: 950px;
+$mid-tablet-scr: 931px;
+$tablet-scr: 900px;
+$big-phone-scr: 770px;
