--- a/projects/graded-asignments/kelioniu-puslapis/components/_page-settings.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/components/_page-settings.scss
@@ -1,10 +1,11 @@
+@import "../variables";
 html {
   box-sizing: border-box;
   font-family: "Plus Jakarta Sans", sans-serif;
 }
 body {
-  font-size: 16px;
-  @media screen and (max-width: 950px) {
+  font-size: 1rem;
+  @media screen and (max-width: $big-tablet-scr) {
     font-size: 10px;
   }
 }
