--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.scss
@@ -3,7 +3,7 @@
 @import "../components/footer";
 
 body {
-  background-color: #f9f9f9;
+  background-color: $grey-bg;
 }
 
 .hat {
@@ -23,7 +23,7 @@ body {
 }
 
 main {
-  background: #f9f9f9;
+  background: $grey-bg;
   width: $container-width;
   // margin: 0 auto;
   // padding: 5rem;
