--- a/projects/graded-asignments/kelioniu-puslapis/styles.scss
+++ b/projects/graded-asignments/kelioniu-puslapis/styles.scss
@@ -6,7 +6,7 @@
 @import "./components/footer";
 
 header {
-  height: calc(100vh - 4.4rem);
+  min-height: calc(100vh - 4.4rem);
   background-image: url("./pics/main-banner.jpeg");
   background-size: cover;
   background-position: center;
@@ -18,11 +18,11 @@ header {
     color: white;
     text-align: center;
     h1 {
-      font-size: 5.6rem;
+      font-size: min(5.6rem, 50px);
       font-weight: 700;
     }
     h2 {
-      font-size: 2.3rem;
+      font-size: min(2.3rem, 36px);
       font-weight: 300;
       padding-top: 0.5rem;
     }
@@ -33,7 +33,7 @@ header {
       text-transform: uppercase;
       padding: 1rem 2rem;
       border-radius: 1.5rem;
-      background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
+      background: linear-gradient(180deg, #00d4e4 -40.5%, $blue-btn 97.28%);
       border: none;
       color: white;
       &:hover {
@@ -47,8 +47,9 @@ header {
   position: relative;
   top: -184px;
   margin-left: calc(100vw - 640px);
-  @media screen and (max-width: 950px) {
+  @media screen and (max-width: $big-tablet-scr) {
     z-index: -1;
+    max-width: 100%;
   }
 }
 
@@ -66,7 +67,7 @@ header {
   }
 }
 .grey-bg {
-  background-color: #f9f9f9;
+  background-color: $grey-bg;
   padding-bottom: 7rem;
 }
 
@@ -79,7 +80,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  @media screen and (max-width: 950px) {
+  @media screen and (max-width: $big-tablet-scr) {
     height: auto;
   }
   .decor-2 {
@@ -87,6 +88,7 @@ header {
     top: 0;
     left: 0;
     z-index: 1;
+    max-width: 100%;
   }
 
   .card-wrap {
@@ -107,13 +109,13 @@ header {
         "text text a b"
         "text text c d";
       gap: 3rem;
-      @media screen and (max-width: 1350px) {
+      @media screen and (max-width: $big-screen) {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 3r;
         grid-template-areas: "text text text text" " a b c d";
         gap: 1rem;
       }
-      @media screen and (max-width: 950px) {
+      @media screen and (max-width: $big-tablet-scr) {
         padding: 1rem;
         width: 90%;
         grid-template-columns: 1fr 1fr;
@@ -132,13 +134,13 @@ header {
         gap: 2.8rem;
         padding-right: 3rem;
         h1 {
-          color: #333;
+          color: $dark-grey;
           font-family: Plus Jakarta Sans;
           font-size: 2.25rem;
           font-weight: 700;
         }
         h2 {
-          color: #888;
+          color: $grey-overlay;
           font-family: Plus Jakarta Sans;
           font-size: 1rem;
           font-weight: 400;
@@ -150,14 +152,14 @@ header {
         flex-direction: column;
         justify-content: start;
         .number {
-          color: #1f59ee;
+          color: $blue-btn;
           font-family: Plus Jakarta Sans;
           font-size: 3rem;
           font-weight: 700;
           line-height: 120%; /* 60px */
         }
         .legend {
-          color: #333;
+          color: $dark-grey;
 
           /* H5 */
           font-family: Plus Jakarta Sans;
@@ -165,7 +167,7 @@ header {
           font-weight: 700;
         }
         .explain-legend {
-          color: #888;
+          color: $grey-overlay;
           font-family: Plus Jakarta Sans;
           font-size: 1rem;
           font-weight: 400;
@@ -177,11 +179,16 @@ header {
 }
 .container-full-w {
   position: relative;
+  max-width: 100vw;
   .deco-rekomend-top {
     position: absolute;
     top: 0;
     right: 0;
     z-index: -1;
+    max-width: 100%;
+    img {
+      max-width: 100%;
+    }
   }
   .rekomendacijos {
     width: $container-width;
@@ -199,6 +206,7 @@ header {
       font-family: Plus Jakarta Sans;
       font-size: 2.25rem;
       font-weight: 700;
+      word-break: break-all;
     }
     .thumbs {
       row-gap: 4rem;
@@ -260,14 +268,18 @@ header {
           .btn-wrap {
             border-radius: 1.5rem;
             padding: 2px;
-            background: linear-gradient(180deg, #00d4e4 -40.5%, #1f59ee 97.28%);
+            background: linear-gradient(
+              180deg,
+              #00d4e4 -40.5%,
+              $blue-btn 97.28%
+            );
             width: max-content;
             margin-top: 0.625rem;
             .more-btn {
               padding: 1rem 2rem;
               border-radius: 1.5rem;
               border: transparent;
-              background-color: #1f59ee;
+              background-color: $blue-btn;
               color: white;
 
               &:hover {
@@ -280,7 +292,7 @@ header {
               padding: 1rem 2rem;
               border-radius: 1.5rem;
               border: transparent;
-              background-color: #1f59ee;
+              background-color: $blue-btn;
               color: white;
               display: flex;
               align-items: center;
@@ -304,6 +316,7 @@ header {
       bottom: 0;
       left: 0;
       z-index: -1;
+      max-width: 100%;
     }
   }
 }
